--- a/index1.html
+++ b/index1.html
@@ -20,12 +20,17 @@
                 <div class="searchbar">
                     <input type="text" placeholder="Search" class="search-bar">
                     <button class="search-button">
-                          <i class="fas fa-search" style="color:#ccc"></i>
+                          <i class="fas fa-search" style="color:#ccc; font-size:20px;"></i>
                     </button>
                 </div>
-                <div class="circle">
+                <div class="mic">
                     <i class="fas fa-microphone" style="color:#ccc;"></i>
                 </div>
+                <div class="create">
+                    <button><i class="fas fa-plus"></i>Create</button>
+                </div>
+                <i class="fas fa-bell" style="margin-left: 20px;"></i>
+                <i class="fas fa-circle-user" style="margin-left: 20px; font-size: 30px;"></i>
             </div>
         </div>
         <div class="sidebar-content collapsed" id="sidebar-content">
