added suggesstion tags

--- a/index1.html
+++ b/index1.html
@@ -12,9 +12,28 @@
 
 <body>
     <div class="container">
+        <div class="tag-bar">
+            <div class="tag active">All</div>
+            <div class="tag">Music</div>
+            <div class="tag">Tamil Cinema</div>
+            <div class="tag">Dramedy</div>
+            <div class="tag">Mixes</div>
+            <div class="tag">Résumés</div>
+            <div class="tag">Pritam Chakraborty</div>
+            <div class="tag">T-Series</div>
+            <div class="tag">Data Structures</div>
+            <div class="tag">A. R. Rahman</div>
+            <div class="tag">Colleges</div>
+            <div class="tag">Web Development</div>
+            <div class="tag">Sports</div>
+            <div class="tag">News</div>
+            <div class="tag">Live</div>
+            <div class="tag">Calculations</div>
+            <div class="tag">Study Tips</div>
+        </div>
         <div class="sidebar" id="sidebar">
             <div class="logo">
-                <i class="fas fa-bars" id="toggle-btn" onclick="toggleSidebar()"></i>
+                <i class="fas fa-bars" id="toggle-btn" style="margin-right: 25px;" onclick="toggleSidebar()"></i>
                 <i class="fab fa-youtube fa-2x" style="color:red"></i>
                 <span class="youtube-font">YouTube<sup style="font-size: 0.6em; color: #ccc;">IN</sup></span>
                 <div class="searchbar">
