made the nav bar fixed

--- a/index1.html
+++ b/index1.html
@@ -15,11 +15,11 @@
         <div class="tag-bar">
             <div class="tag active">All</div>
             <div class="tag">Music</div>
-            <div class="tag">Tamil Cinema</div>
+            <div class="tag">Telugu Cinema</div>
             <div class="tag">Dramedy</div>
             <div class="tag">Mixes</div>
             <div class="tag">Résumés</div>
-            <div class="tag">Pritam Chakraborty</div>
+            <div class="tag">Software Engineering</div>
             <div class="tag">T-Series</div>
             <div class="tag">Data Structures</div>
             <div class="tag">A. R. Rahman</div>
@@ -31,7 +31,7 @@
             <div class="tag">Calculations</div>
             <div class="tag">Study Tips</div>
         </div>
-        <div class="sidebar" id="sidebar">
+        <div class="navbar" id="navbar">
             <div class="logo">
                 <i class="fas fa-bars" id="toggle-btn" style="margin-right: 25px;" onclick="toggleSidebar()"></i>
                 <i class="fab fa-youtube fa-2x" style="color:red"></i>
